Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-09-15 Kimmo
 BUG: [ 1558839 ] ShellExtension does not compile as 64-bit
  ShellExtension: WinMergeShell.cpp WinMergeShell.h
 PATCH: [ 1558893 ] Fix incompatible prototype in MessageBoxDialog
  Src/Common: MessageBoxDialog.cpp MessageBoxDialog.h

2006-09-13 Kimmo
 BUG: [ 1547247 ] WinMerge ANSI target does not compile with VS2005
  Fix from Perry
  Src: Common/SuperComboBox.cpp
 PATCH: [ 1558152 ] Italian translation updated
  Submitted by Andrea Decorte
  Src/Languages/Italian: MergeItalian.rc

2006-09-12 Takashi
 PATCH: [ 1555764 ] prevent from shaking in view when pressing F5 down
  Src: GhostTextView.cpp MergeDiffDetailView.cpp

2006-09-12 Kimmo
 PATCH: [ 1556851 ] An Swedish translation update
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2006-09-11 WinMerge beta release 2.5.6 (revision 3552)

2006-09-11 Takashi
 Japanese translation - update
  Src/Languages/Japanese: MergeJapanese.rc

2006-09-11 Takashi
 PATCH: [ 1555764 ] prevent from shaking in view when pressing F5 down
  Src: GhostTextView.cpp GhostTextView.h MergeDiffDetailView.cpp MergeDiffDetailView.h

2006-09-11 Takashi
 BUG: [ 1555664 ] fail to copy all to right when enabling moved block detect
  Src: MergeDoc.cpp

2006-09-10 Kimmo
 Czech translation update from Jan Hryz
  Src/Languages/Czech/MergeCzech.rc
 PATCH: [ 1553714 ] Add new commandine switches to help dialog
  Src: Merge.rc MergeArgs.cpp resource.h
  Src/Languages/*: Merge*.rc
 PATCH: [ 1552228 ] Don't use 'export' as variable name
  Src: dllpstub.cpp

2006-09-08 Gal
 RFE: [ 1533506 ] Need commandline switch for single-instance
  Src: Merge.cpp 

2006-09-06 Kimmo
 PATCH: [ 1552901 ] Update VC loose filefilter
  Filters: Merge_VC_loose.flt
 PATCH: [ 1552917 ] Fix GUI for autocompletion option
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-09-05 Kimmo