@@ -254,7 +254,7 @@ void CSplashWnd::OnPaint()
 /** 
  * @brief Hide splashscreen after specified time.
  */
-void CSplashWnd::OnTimer(UINT /*nIDEvent*/)
+void CSplashWnd::OnTimer(UINT_PTR nIDEvent)
 {
 	// Destroy the splash screen window.
 	HideSplashScreen();
